F64 | Updated spot tiles so to avoid icons overlapping names

--- a/app/assets/stylesheets/_spot-tile.scss
+++ b/app/assets/stylesheets/_spot-tile.scss
@@ -13,7 +13,7 @@
     background-color: #fff;
     padding: 10px 16px 10px 54px;
     position: relative;
-    height: 46px;
+    height: 70px;
 
     h3 {
       display: inline-block;
@@ -24,26 +24,21 @@
 
     .spot-sub-rating-group,
     .spot-plan-summary {
-      display: inline-block;
-      position: absolute;
-      line-height: 40px;
-      top: 50%;
-      right: 16px;
-      height: 40px;
-      margin-top: -20px;
+      display: block;
+      margin-left: -5px;
     }
   }
 
   &__main-rating {
     position: absolute;
     width: 40px;
-    height: 46px;
+    height: 100%;
     color: #fff;
     border-radius: 0 0 0 3px;
     top: 0;
     left: 0;
     font-size: 20px;
-    line-height: 46px;
+    line-height: 70px;
     text-align: center;
 
     &.--positive {
